--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,7 +38,7 @@
         android:layout_width="286dp"
         android:layout_height="56dp"
         android:ems="10"
-        android:hint="Second Name"
+        android:hint="Last Name"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,5 +99,18 @@
         app:layout_constraintVertical_bias="0.949"
         app:srcCompat="@drawable/securinzy" />
 
+    <EditText
+        android:id="@+id/editTextphonenumber"
+        android:layout_width="286dp"
+        android:layout_height="56dp"
+        android:ems="10"
+        android:hint="Phone Number"
+        android:inputType="text|phone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.408"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.386" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
