--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="105dp"
         android:layout_height="41dp"
         android:text="  Login "
+
         android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,17 +22,18 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="92dp"
-        android:layout_height="22dp"
+        android:layout_width="144dp"
+        android:layout_height="50dp"
         android:autoLink="web"
-        android:text=" Sign Up"
+        android:text=" Sign Up Here"
+        android:textColor="@color/blue"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.536"
+        app:layout_constraintHorizontal_bias="0.591"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.558" />
+        app:layout_constraintVertical_bias="0.559" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
