--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -26,7 +26,7 @@
         android:layout_height="55dp"
         android:ems="10"
         android:inputType="date"
-        android:text="enter date "
+        android:hint="enter date "
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,7 +77,7 @@
         android:layout_height="92dp"
         android:ems="10"
         android:inputType="text"
-        android:text="write brife discription about your network "
+        android:hint="Write brief discription about your network "
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.703"
