--- a/app/src/main/res/layout/activity_software_testing.xml
+++ b/app/src/main/res/layout/activity_software_testing.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".softwareTesting">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
         android:layout_width="418dp"
@@ -72,6 +73,19 @@
         android:layout_marginTop="416dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/button_back"
+        android:layout_width="43dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="16dp"
+        android:autoLink="web"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/android_arrow_back_5122222" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
