--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -21,12 +21,14 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/editTextDate"
-        android:layout_width="243dp"
-        android:layout_height="55dp"
-        android:ems="10"
-        android:inputType="date"
-        android:hint="enter date "
+        android:id="@+id/etDate2"
+        android:layout_width="225dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="276dp"
+        android:hint="Enter date"
+        android:textSize="16sp"
+        android:focusable="false"
+        android:onClick="showDatePicker"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,5 +85,18 @@
         app:layout_constraintHorizontal_bias="0.703"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar3" />
+    <ImageView
+        android:id="@+id/button_back"
+        android:layout_width="43dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="16dp"
+        android:autoLink="web"
+        android:contentDescription="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/android_arrow_back_5122222" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
