--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -47,6 +47,19 @@
 
 
     <Button
+        android:id="@+id/button_back"
+        android:layout_width="120dp"
+        android:layout_height="64dp"
+        android:text="logout"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023" />
+
+    <Button
         android:id="@+id/button_swtest"
         android:layout_width="190dp"
         android:layout_height="92dp"
